@@ -1,25 +1,26 @@
 package br.ufsm.smpp.service;
-
-import br.ufsm.smpp.model.incidente.Incidente;
-import br.ufsm.smpp.model.ocorrencia.Ocorrencia;
-import br.ufsm.smpp.model.ocorrencia.OcorrenciaDTO;
-import br.ufsm.smpp.model.ocorrencia.OcorrenciaRepository;
-import br.ufsm.smpp.model.ocorrencia.foto_ocorrencia.FotoOcorrencia;
-import br.ufsm.smpp.model.ocorrencia.tipo_ocorrencia.TipoOcorrencia;
-import br.ufsm.smpp.model.propriedade.Propriedade;
+import br.ufsm.smpp.dto.FotoOcorrenciaDTO;
+import br.ufsm.smpp.dto.LookupDTO;
+import br.ufsm.smpp.dto.OcorrenciaDTOs;
+import br.ufsm.smpp.model.Incidente;
+import br.ufsm.smpp.model.Ocorrencia;
+import br.ufsm.smpp.repository.OcorrenciaRepository;
+import br.ufsm.smpp.model.FotoOcorrencia;
+import br.ufsm.smpp.model.TipoOcorrencia;
+import br.ufsm.smpp.model.Propriedade;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
-
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,82 +30,144 @@ public class OcorrenciaService {
     private final PropriedadeService propriedadeService;
     private final IncidenteService incidenteService;
     private final TipoOcorrenciaService tipoOcorrenciaService;
+    private final FotoOcorrenciaService fotoOcorrenciaService; // Necessário para o DTO
+
     private final Path pastaUpload = Paths.get("uploads");
 
-    public List<Ocorrencia> listarPorPropriedade(UUID propriedadeId) {
-        return ocorrenciaRepository.findByPropriedadeId(propriedadeId);
-    }
-
-    public Optional<Ocorrencia> buscarPorId(UUID id) {
-        return ocorrenciaRepository.findById(id);
+    public List<OcorrenciaDTOs.Response> listarPorPropriedade(UUID propriedadeId) {
+        return ocorrenciaRepository.findByPropriedadeIdOrderByTipoOcorrenciaNome(propriedadeId).stream()
+                .map(this::toResponseDto)
+                .collect(Collectors.toList());
     }
 
     @Transactional
-    public Ocorrencia salvar(OcorrenciaDTO dto, List<MultipartFile> arquivos) throws IOException {
+    public OcorrenciaDTOs.Response salvarComFotos(OcorrenciaDTOs.Request dto, List<MultipartFile> arquivos) throws IOException {
 
-        // 1. Busca as entidades relacionadas a partir dos IDs do DTO
-        Propriedade propriedade = propriedadeService.buscarPorId(dto.getPropriedadeId());
-
-        TipoOcorrencia tipoOcorrencia = tipoOcorrenciaService.buscarPorId(dto.getTipoOcorrenciaId())
-                .orElseThrow(() -> new RuntimeException("Tipo de ocorrência não encontrado"));
+        Propriedade propriedade = propriedadeService.buscarEntidadePorId(dto.propriedadeId());
+        TipoOcorrencia tipoOcorrencia = tipoOcorrenciaService.buscarEntidadePorId(dto.tipoOcorrenciaId());
 
         List<Incidente> incidentes = new ArrayList<>();
-        if (dto.getIncidentes() != null && !dto.getIncidentes().isEmpty()) {
-            incidentes = dto.getIncidentes().stream()
-                    .map(id -> incidenteService.buscarPorId(id)
-                            .orElseThrow(() -> new RuntimeException("Incidente não encontrado: " + id)))
-                    .toList();
+        if (dto.incidentes() != null && !dto.incidentes().isEmpty()) {
+            incidentes = dto.incidentes().stream()
+                    .map(incidenteService::buscarEntidadePorId)
+                    .collect(Collectors.toList());
         }
 
-        // 2. Usa o método de mapeamento para criar a entidade Ocorrencia
-        Ocorrencia ocorrencia = DtoParaEntidade(dto, propriedade, tipoOcorrencia, incidentes);
+        Ocorrencia ocorrencia = mapearDtoParaEntidade(dto, propriedade, tipoOcorrencia, incidentes);
 
-        // 3. Processa e associa as fotos, se existirem
         if (arquivos != null && !arquivos.isEmpty()) {
             if (!Files.exists(pastaUpload)) {
                 Files.createDirectories(pastaUpload);
             }
 
-            List<FotoOcorrencia> fotos = new ArrayList<>();
-            for (MultipartFile arquivo : arquivos) {
-                // Gera um nome único para o arquivo
-                String nomeArquivo = UUID.randomUUID() + "_" + arquivo.getOriginalFilename();
-                Path destino = this.pastaUpload.resolve(nomeArquivo);
+            List<FotoOcorrencia> fotos = arquivos.stream().map(arquivo -> {
+                try {
+                    String nomeArquivo = UUID.randomUUID() + "_" + arquivo.getOriginalFilename();
+                    Path destino = this.pastaUpload.resolve(nomeArquivo);
+                    arquivo.transferTo(destino);
 
-                // Salva o arquivo no disco
-                arquivo.transferTo(destino);
-
-                // Cria a entidade FotoOcorrencia
-                FotoOcorrencia foto = new FotoOcorrencia();
-                foto.setCaminho(nomeArquivo);
-                foto.setNome(arquivo.getOriginalFilename());
-
-                // Define a relação bidirecional
-                foto.setOcorrencia(ocorrencia);
-                fotos.add(foto);
-            }
+                    FotoOcorrencia foto = new FotoOcorrencia();
+                    foto.setCaminho(nomeArquivo);
+                    foto.setNome(arquivo.getOriginalFilename());
+                    foto.setOcorrencia(ocorrencia);
+                    return foto;
+                } catch (IOException e) {
+                    throw new RuntimeException("Erro ao salvar arquivo: " + arquivo.getOriginalFilename(), e);
+                }
+            }).collect(Collectors.toList());
             ocorrencia.setFotos(fotos);
         }
 
-        // 4. Salva a ocorrência (o CascadeType.ALL cuidará de salvar as fotos associadas)
-        return ocorrenciaRepository.save(ocorrencia);
+        Ocorrencia ocorrenciaSalva = ocorrenciaRepository.save(ocorrencia);
+        return toResponseDto(ocorrenciaSalva);
     }
 
-    public Ocorrencia salvar(Ocorrencia ocorrencia) {
-        return ocorrenciaRepository.save(ocorrencia);
+    @Transactional
+    public OcorrenciaDTOs.Response updateOcorrencia(UUID ocorrenciaId, OcorrenciaDTOs.UpdateRequest dto, List<MultipartFile> novasFotos) throws IOException {
+
+        Ocorrencia ocorrencia = ocorrenciaRepository.findById(ocorrenciaId)
+                .orElseThrow(() -> new EntityNotFoundException("Ocorrência não encontrada: " + ocorrenciaId));
+
+        if (dto.fotosParaExcluir() != null) {
+            dto.fotosParaExcluir().forEach(fotoOcorrenciaService::deleteFoto);
+        }
+
+        if (novasFotos != null && !novasFotos.isEmpty()) {
+            if (!Files.exists(pastaUpload)) {
+                Files.createDirectories(pastaUpload);
+            }
+            for (MultipartFile arquivo : novasFotos) {
+                String nomeArquivo = UUID.randomUUID() + "_" + arquivo.getOriginalFilename();
+                Path destino = this.pastaUpload.resolve(nomeArquivo);
+                arquivo.transferTo(destino);
+
+                FotoOcorrencia foto = new FotoOcorrencia();
+                foto.setCaminho(nomeArquivo);
+                foto.setNome(arquivo.getOriginalFilename());
+                foto.setOcorrencia(ocorrencia);
+                ocorrencia.getFotos().add(foto);
+            }
+        }
+
+        TipoOcorrencia tipo = tipoOcorrenciaService.buscarEntidadePorId(dto.tipoOcorrenciaId());
+        List<Incidente> incidentes = dto.incidentes().stream()
+                .map(incidenteService::buscarEntidadePorId)
+                .collect(Collectors.toList());
+
+        ocorrencia.setTipoOcorrencia(tipo);
+        ocorrencia.setIncidentes(incidentes);
+        ocorrencia.setData(dto.data());
+        ocorrencia.setDescricao(dto.descricao());
+
+        Ocorrencia ocorrenciaAtualizada = ocorrenciaRepository.save(ocorrencia);
+        return toResponseDto(ocorrenciaAtualizada);
     }
 
-    private Ocorrencia DtoParaEntidade(OcorrenciaDTO dto, Propriedade propriedade, TipoOcorrencia tipoOcorrencia, List<Incidente> incidentes) {
+    @Transactional
+    public void excluir(UUID id) {
+
+        Ocorrencia ocorrencia = ocorrenciaRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Ocorrência não encontrada com ID: " + id));
+
+        if (ocorrencia.getFotos() != null && !ocorrencia.getFotos().isEmpty()) {
+            for (FotoOcorrencia foto : ocorrencia.getFotos()) {
+                try {
+                    Path arquivoPath = pastaUpload.resolve(foto.getCaminho());
+                    Files.deleteIfExists(arquivoPath);
+                } catch (IOException e) {
+                    System.err.println("Erro ao deletar arquivo físico: " + foto.getCaminho() + " - " + e.getMessage());
+                }
+            }
+        }
+
+        ocorrenciaRepository.deleteById(id);
+    }
+
+    private Ocorrencia mapearDtoParaEntidade(OcorrenciaDTOs.Request dto, Propriedade propriedade, TipoOcorrencia tipoOcorrencia, List<Incidente> incidentes) {
         Ocorrencia ocorrencia = new Ocorrencia();
         ocorrencia.setPropriedade(propriedade);
         ocorrencia.setTipoOcorrencia(tipoOcorrencia);
         ocorrencia.setIncidentes(incidentes);
-        ocorrencia.setData(dto.getData());
-        ocorrencia.setDescricao(dto.getDescricao());
+        ocorrencia.setData(dto.data());
+        ocorrencia.setDescricao(dto.descricao());
         return ocorrencia;
     }
 
-    public void excluir(UUID id) {
-        ocorrenciaRepository.deleteById(id);
+    private OcorrenciaDTOs.Response toResponseDto(Ocorrencia ocorrencia) {
+        List<LookupDTO> incidentesDto = ocorrencia.getIncidentes().stream()
+                .map(i -> new LookupDTO(i.getId(), i.getNome()))
+                .collect(Collectors.toList());
+
+        List<FotoOcorrenciaDTO> fotosDto = fotoOcorrenciaService.listarPorOcorrencia(ocorrencia.getId());
+
+        return new OcorrenciaDTOs.Response(
+                ocorrencia.getId(),
+                ocorrencia.getData(),
+                ocorrencia.getDescricao(),
+                new LookupDTO(ocorrencia.getTipoOcorrencia().getId(), ocorrencia.getTipoOcorrencia().getNome()),
+                incidentesDto,
+                fotosDto
+        );
     }
 }
+
